--- a/cli/MakeFile
+++ b/cli/MakeFile
@@ -1,5 +1,5 @@
 swag-client:
-	swagger generate client -f ../backend/doc/swagger.jspn -A api
+	swagger generate client -f ../backend/docs/swagger.json -A api
 
 build:
 	go build -a -o silenda
